--- a/components/Voteform/Voteformstyles.module.css
+++ b/components/Voteform/Voteformstyles.module.css
@@ -74,7 +74,7 @@
   width: 100%;
   word-wrap:break-word;
   text-align: left;
-  padding: 1rem 0;
+  padding: 1rem ;
   font-size: 1.2rem;
   font-weight: 500;
   color: white;
